--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,7 @@
 @import 'page/index';
 @import 'page/archive-coverage';
 @import 'page/application';
+@import 'page/single-post';
 
 //google-font
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
@@ -87,22 +88,13 @@ h5, .h5{
 p, .p1{
     font-size: $p1;
     font-weight: 300;
-<<<<<<< HEAD
     line-height: 1.7;
     letter-spacing: 0.01em;
-=======
-    line-height: 140%;
-    letter-spacing: 0em;
->>>>>>> 7b4c069fe7945e3d0507e4dd8eea965dccefc527
     color: $c-gray;
     
     @include mini-pad{
         font-size: $m-p1;
-<<<<<<< HEAD
         // line-height: 110%;
-=======
-        line-height: 130%;
->>>>>>> 7b4c069fe7945e3d0507e4dd8eea965dccefc527
     }
 }
 
@@ -134,13 +126,7 @@ p, .p1{
 // 按鈕樣式
 .btn{
     @extend %pointer;
-<<<<<<< HEAD
     @extend %bb;
-=======
-    @extend %dib;
-    width: fit-content;
-    padding: 8px 24px;
->>>>>>> 7b4c069fe7945e3d0507e4dd8eea965dccefc527
     font-size: $p2;
     font-weight: 700;
     line-height: 120%;
@@ -148,12 +134,8 @@ p, .p1{
     border-radius: 8px;
     color:$c-white;
     background: $c-primary;
-<<<<<<< HEAD
     transition: all ease .4s;
-=======
     border: 1px solid $c-primary;
-    border-radius: 4px;
->>>>>>> 7b4c069fe7945e3d0507e4dd8eea965dccefc527
 
     @include mini-pad{
         font-size: $m-p2;
@@ -163,7 +145,6 @@ p, .p1{
     &:hover{
         background: $c-white;
         color: $c-primary;
-        border: 1px solid $c-primary;
         -webkit-transition: all 0.3s ease;
         -moz-transition: all 0.3s ease;
         -ms-transition: all 0.3s ease;
@@ -217,7 +198,7 @@ p, .p1{
 }
 
 // input&select - basic
-input,select{
+input,select,textarea{
     border: none;
     &:focus{
         outline: none;
