首頁新增wrapper class 文章 職缺區塊手機版slider寬度調整 品牌類別區塊調整 增加layout名稱註解 增加Header頁面連結 修正廣告區塊圖片 新增幸福職涯頁面內容 增加公司,職缺tag layout檔案 新增頁籤連結樣式

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -1,6 +1,6 @@
 <nav>
     <h1 class="nav-brand">
-        <a href="#">
+        <a href="index.html">
             <img src="assets/img/1111_logo.svg" alt="1111幸福企業">
         </a>
     </h1>
@@ -22,16 +22,16 @@
         <li>
             <a href="#" class="p2">幸福職涯 <span><i class="fa-solid fa-angle-down"></i></span></a> 
             <ul class="dropdown-menu">
-                <li><a href="#">嚴選企業</a> </li>
-                <li><a href="#">推薦職缺</a> </li>
+                <li><a href="happiness-company.html">嚴選企業</a> </li>
+                <li><a href="happiness-job.html">推薦職缺</a> </li>
             </ul>
         </li>
     
         <li>
             <a href="#" class="p2">精選NEWS <span><i class="fa-solid fa-angle-down"></i></span></a> 
             <ul class="dropdown-menu">
-                <li><a href="#">企業報導</a> </li>
-                <li><a href="#">企業特刊</a> </li>
+                <li><a href="archive-coverage.html">企業報導</a> </li>
+                <li><a href="archive-issue.html">企業特刊</a> </li>
             </ul>
         </li>
     
@@ -75,15 +75,15 @@
             <li>
                 <a href="#">幸福職涯&ensp;<span><i class="fa-solid fa-angle-down"></i></span></a>
                 <ul>
-                    <li><a href="#">&emsp;嚴選企業</a> </li>
-                    <li><a href="#">&emsp;推薦職缺</a> </li>
+                    <li><a href="happiness-company.html">&emsp;嚴選企業</a> </li>
+                    <li><a href="happiness-job.html">&emsp;推薦職缺</a> </li>
                 </ul>
             </li>
             <li>
                 <a href="#">精選NEWS&ensp;<span><i class="fa-solid fa-angle-down"></i></span></a>
                 <ul>
-                    <li><a href="#">&emsp;企業報導</a> </li>
-                    <li><a href="#">&emsp;企業特刊</a> </li>
+                    <li><a href="archive-coverage.html">&emsp;企業報導</a> </li>
+                    <li><a href="archive-issue.html">&emsp;企業特刊</a> </li>
                 </ul>
             </li>
             <li><a href="#">人才永續</a></li>
