--- a/src/layout/card-job.html
+++ b/src/layout/card-job.html
@@ -1,3 +1,5 @@
+<!-- 01 職涯區塊 -->
+
 <div class="cardJob-section">
     <div class="card-job">
         <img src="assets/img/job-card-cover.png" alt="">
@@ -264,11 +266,11 @@
                     <ul>
                         <li>
                             <img src="assets/img/job-card-icon01.png" alt="">
-                            <p>台北市南港區</p>
+                            <p class="p2">台北市南港區</p>
                         </li>
                         <li>
                             <img src="assets/img/job-card-icon02.png" alt="">
-                            <p>月薪 33,000~43,000元</p>
+                            <p class="p2">月薪 33,000~43,000元</p>
                         </li>
                     </ul>
                 </div>
@@ -297,19 +299,19 @@
                     <ul>
                         <li>
                             <img src="assets/img/job-card-icon01.png" alt="">
-                            <p>台北市南港區</p>
+                            <p class="p2">台北市南港區</p>
                         </li>
                         <li>
                             <img src="assets/img/job-card-icon02.png" alt="">
-                            <p>月薪 33,000~43,000元</p>
+                            <p class="p2">月薪 33,000~43,000元</p>
                         </li>
                     </ul>
                 </div>
                 <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p>友善環境</p>
-                    <p>幸福企業</p>
-                    <p>幸福企業讚讚</p>
+                    <p class="tag">友善環境</p>
+                    <p class="tag">幸福企業</p>
+                    <p class="tag">幸福企業讚讚</p>
         
                 </div>
             </div>
@@ -330,19 +332,19 @@
                     <ul>
                         <li>
                             <img src="assets/img/job-card-icon01.png" alt="">
-                            <p>台北市南港區</p>
+                            <p class="p2">台北市南港區</p>
                         </li>
                         <li>
                             <img src="assets/img/job-card-icon02.png" alt="">
-                            <p>月薪 33,000~43,000元</p>
+                            <p class="p2">月薪 33,000~43,000元</p>
                         </li>
                     </ul>
                 </div>
                 <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p>友善環境</p>
-                    <p>幸福企業</p>
-                    <p>幸福企業讚讚</p>
+                    <p class="tag">友善環境</p>
+                    <p class="tag">幸福企業</p>
+                    <p class="tag">幸福企業讚讚</p>
         
                 </div>
             </div>
@@ -363,19 +365,52 @@
                     <ul>
                         <li>
                             <img src="assets/img/job-card-icon01.png" alt="">
-                            <p>台北市南港區</p>
+                            <p class="p2">台北市南港區</p>
                         </li>
                         <li>
                             <img src="assets/img/job-card-icon02.png" alt="">
-                            <p>月薪 33,000~43,000元</p>
+                            <p class="p2">月薪 33,000~43,000元</p>
                         </li>
                     </ul>
                 </div>
                 <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p>友善環境</p>
-                    <p>幸福企業</p>
-                    <p>幸福企業讚讚</p>
+                    <p class="tag">友善環境</p>
+                    <p class="tag">幸福企業</p>
+                    <p class="tag">幸福企業讚讚</p>
+        
+                </div>
+            </div>
+            <div class="card-office">
+                <p>台灣艾司摩爾科技股份有限公司</p>
+            </div>
+            </div>
+        </div>
+        <div class="swiper-slide">    
+            <div class="card-job">
+            <img src="assets/img/job-card-cover.png" alt="">
+            <div class="card-content">
+                <div class="job-title">
+                    <i class="fa-solid fa-heart"></i>
+                    <p>職缺名稱</p>
+                </div>
+                <div class="job-content">
+                    <ul>
+                        <li>
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p class="p2">台北市南港區</p>
+                        </li>
+                        <li>
+                            <img src="assets/img/job-card-icon02.png" alt="">
+                            <p class="p2">月薪 33,000~43,000元</p>
+                        </li>
+                    </ul>
+                </div>
+                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
+                <div class="job-tag"> 
+                    <p class="tag">友善環境</p>
+                    <p class="tag">幸福企業</p>
+                    <p class="tag">幸福企業讚讚</p>
         
                 </div>
             </div>
