--- a/src/layout/category.html
+++ b/src/layout/category.html
@@ -1,7 +1,25 @@
+<!-- 09 品牌識別 -->
+
 <div class="category-section">
     <div class="title">
         <h2>品牌報名類別<br>二○二三</h2>
         <p>在這裡，找尋你的感動。<br>一份工作，一個選擇。一種感動，幸福一生。</p>
     </div>
-    <img src="assets/img/category-img.png" alt="">
+    <!-- <img src="assets/img/category-img.png" alt=""> -->
+    <div class="category-content">
+        <ul>
+            <li class="category-item"><img src="assets/img/category-item01.png" alt=""></li>
+            <li class="category-item"><img src="assets/img/category-item02.png" alt=""></li>
+            <li class="category-item"><img src="assets/img/category-item03.png" alt=""></li>
+            <li class="category-item"><img src="assets/img/category-item04.png" alt=""></li>
+            <li class="category-item"><img src="assets/img/category-item05.png" alt=""></li>
+            <li class="category-item"><img src="assets/img/category-item06.png" alt=""></li>
+            <li class="category-item"><img src="assets/img/category-item07.png" alt=""></li>
+            <li class="category-item"><img src="assets/img/category-item08.png" alt=""></li>
+            <li class="category-item"><img src="assets/img/category-item09.png" alt=""></li>
+            <li class="category-item"><img src="assets/img/category-item10.png" alt=""></li>
+            <li class="category-item"></li>
+            <li class="category-item"><img src="assets/img/category-item11.png" alt=""></li>
+        </ul>
+    </div>
 </div>
