--- a/src/layout/swiper.html
+++ b/src/layout/swiper.html
@@ -1,3 +1,5 @@
+<!-- 10 Banner -->
+
 <div class="swiper mySwiper">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -29,7 +31,7 @@
             </div>
         </div>
     </div>
-    <div class="swiper-button-next"></div>
+    <!-- <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
+    <div class="swiper-pagination"></div> -->
 </div>
