--- a/src/sass/page/_index.scss
+++ b/src/sass/page/_index.scss
@@ -1,130 +1,165 @@
-.swiper{
-    margin: 33px 0px 0px 0px;
-}
-
-.cardJob{
-    @extend %page-content;
-    @include flex($d:column,$a-i:center);
-    margin: auto;
-    gap:48px;
-    padding: 88px 120px;
-    @include pad{
-        padding: 66px 80px;
+.index-wrapper{
+    .swiper{
+        margin: 33px 0px 0px 0px;
     }
-    @include mini-pad{
-        padding: 40px 30px;
-    }
-}
-
-.article{
-    @extend %page-content;
-    @include flex($d:column,$a-i:center);
-    margin: auto;
-    gap:48px;
-    padding: 88px 120px;
-    background: $c-secondary-white;
-    @include pad{
-        padding: 66px 80px;
-    }
-    @include mini-pad{
-        padding: 40px 30px;
-    }
-
-    .article-item{
-        @include flex($d:column);
-        @extend %pointer;
-        flex: 1;
-        gap:20px;
-    }
-
-    .article-section{
-        @include flex($w:wrap);
-        flex: 1;
-        gap:40px;
-        margin: unset;
-        padding: 0px;
-
+    
+    .cardJob{
+        @extend %page-content;
+        @include flex($d:column,$a-i:center);
+        margin: auto;
+        gap:48px;
+        padding: 88px 120px;
         @include pad{
-            @include flex($d:column);
+            padding: 66px 80px;
+            gap:32px;
         }
         @include mini-pad{
-            display: none;
+            padding: 40px 30px;
+            gap:24px;
         }
-
-        >.article-section{
-            @include basic_grid(2,1fr,40px,40px);
+    }
+    
+    .article{
+        @extend %page-content;
+        @include flex($d:column,$a-i:center);
+        margin: auto;
+        gap:48px;
+        padding: 88px 120px;
+        background: $c-secondary-white;
+        @include pad{
+            padding: 66px 80px;
+            gap:32px;
         }
-
-        >.article-item{
+        @include mini-pad{
+            padding: 40px 30px;
+            gap:24px;
+        }
+    
+        .article-item{
             @include flex($d:column);
+            @extend %pointer;
             flex: 1;
-            gap:12px;
-            img{
-                aspect-ratio: 16/9; 
-            }
-            >.article-content{
+            gap:20px;
+        }
+    
+        .article-section{
+            @include flex($w:wrap);
+            flex: 1;
+            gap:40px;
+            margin: unset;
+            padding: 0px;
+    
+            @include pad{
                 @include flex($d:column);
-                gap:4px;
-                .p2{
-                    color: $c-secondary-deep;
+            }
+            @include mini-pad{
+                display: none;
+            }
+    
+            >.article-section{
+                @include basic_grid(2,1fr,40px,40px);
+            }
+    
+            >.article-item{
+                @include flex($d:column);
+                flex: 1;
+                gap:12px;
+                img{
+                    aspect-ratio: 16/9; 
+                }
+                >.article-content{
+                    @include flex($d:column);
+                    gap:4px;
+                    .p2{
+                        color: $c-secondary-deep;
+                    }
                 }
             }
+    
+    
         }
-
-
+    
+        .article-swiper{
+            display: none;
+            .article-item{
+                flex: 1;
+                width: 400px;
+                @include mobile{
+                    width: 200px;
+                }
+                img{
+                    // @include mentor-img(600px);
+                    aspect-ratio: 16/9; 
+                }
+            }
+            @include mini-pad{
+                display: block;
+                max-width: 500px;   
+            }
+    
+            @include mobile{
+                display: block;
+                max-width: 300px;   
+            }
+            .swiper {
+                width: 100%;
+                height: 100%;
+              }
+          
+              .swiper-slide {
+                text-align: center;
+                font-size: 18px;
+                display: flex;
+                background-color: transparent;
+                justify-content: center;
+                align-items: center;
+              }
+          
+              .swiper-slide img {
+                padding: 0px;
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+              }
+        }
+    
+        .article-content{
+            @include mobile{
+                @include flex($d:column);
+                gap:4px;
+            }
+            >h3{
+                @include mobile{
+                    font-size: $m-h4;
+                }
+            }
+            >p{
+                text-overflow: ellipsis;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                display: -webkit-box;
+            }
+        }
     }
-
-    .article-swiper{
-        display: none;
+    
+    .category{
+        @extend %page-content;
+        @include flex($j-c:center);
+        margin: auto;
+        gap:48px;
+        padding: 88px 120px;
+        @include pad{
+            padding: 66px 80px;
+        }
         @include mini-pad{
-            display: block;
-        }
-        .swiper {
-            width: 100%;
-            height: 100%;
-          }
-      
-          .swiper-slide {
-            text-align: center;
-            font-size: 18px;
-            display: flex;
-            background-color: transparent;
-            justify-content: center;
-            align-items: center;
-          }
-      
-          .swiper-slide img {
-            padding: 0px;
-            display: block;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-          }
-    }
-    .article-item{
-        flex: 1;
-        img{
-            // @include mentor-img(600px);
-            aspect-ratio: 16/9; 
+            padding: 40px 30px 140px 30px;
         }
     }
-}
-
-.category{
-    @extend %page-content;
-    @include flex($j-c:center);
-    margin: auto;
-    gap:48px;
-    padding: 88px 120px;
-    @include pad{
-        padding: 66px 80px;
+    
+    .swiper-button-next, 
+    .swiper-button-prev{
+        color:$c-primary;
     }
-    @include mini-pad{
-        padding: 40px 30px;
-    }
-}
-
-.swiper-button-next, 
-.swiper-button-prev{
-    color:$c-primary;
 }
