--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,11 +12,15 @@
 @import 'layout/card-job';
 @import 'layout/category';
 @import 'layout/swiper';
+@import 'layout/card-company-tag';
+@import 'layout/card-job-tag';
 
 //page
 @import 'page/index';
 @import 'page/archive-coverage';
 @import 'page/application';
+@import 'page/happiness-company';
+@import 'page/happiness-job';
 
 //google-font
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
@@ -43,14 +47,14 @@ h2, .h2{
     font-family: "adobe-fangsong-std", 'Noto Sans TC', sans-serif !important;
     font-weight: 600;
     font-style: normal;
-    line-height: 110%;
+    line-height: 120%;
     letter-spacing: 0.01em;
     color: $c-black;
     margin-bottom: 1.5rem;
     
     @include mini-pad{
         font-size: $m-h2;
-        line-height: 102%;
+        line-height: 130%;
     }
 }
 h3, .h3{
@@ -87,22 +91,13 @@ h5, .h5{
 p, .p1{
     font-size: $p1;
     font-weight: 300;
-<<<<<<< HEAD
     line-height: 1.7;
     letter-spacing: 0.01em;
-=======
-    line-height: 140%;
-    letter-spacing: 0em;
->>>>>>> 7b4c069fe7945e3d0507e4dd8eea965dccefc527
     color: $c-gray;
     
     @include mini-pad{
         font-size: $m-p1;
-<<<<<<< HEAD
         // line-height: 110%;
-=======
-        line-height: 130%;
->>>>>>> 7b4c069fe7945e3d0507e4dd8eea965dccefc527
     }
 }
 
@@ -134,16 +129,10 @@ p, .p1{
 // 按鈕樣式
 .btn{
     @extend %pointer;
-<<<<<<< HEAD
-<<<<<<< HEAD
     @extend %bb;
-=======
     @extend %dib;
     width: fit-content;
     padding: 8px 24px;
->>>>>>> 7b4c069fe7945e3d0507e4dd8eea965dccefc527
-=======
->>>>>>> 44b5c4ec3283323ca13d4e04ca3fbe6fd2d8da51
     font-size: $p2;
     font-weight: 700;
     line-height: 120%;
@@ -151,16 +140,11 @@ p, .p1{
     border-radius: 8px;
     color:$c-white;
     background: $c-primary;
-<<<<<<< HEAD
-<<<<<<< HEAD
     transition: all ease .4s;
-=======
     border: 1px solid $c-primary;
     border-radius: 4px;
->>>>>>> 7b4c069fe7945e3d0507e4dd8eea965dccefc527
-=======
     transition: all ease .4s;
->>>>>>> 44b5c4ec3283323ca13d4e04ca3fbe6fd2d8da51
+    white-space: nowrap;
 
     @include mini-pad{
         font-size: $m-p2;
@@ -188,6 +172,14 @@ p, .p1{
     text-align: center;
     @include flex($d:column);
     gap:20px;
+
+    @include mini-pad{
+        padding: 40px 0px;
+    }
+
+    @include mobile{
+        padding: 20px 0px;
+    }
 }
 
 //職缺區塊標籤
@@ -332,4 +324,29 @@ input,select{
         height: 47px;
         border-radius: 8px;
     }
+}
+
+//a link tab
+.linkTab{
+    border-bottom: 1px solid $c-secondary-light;
+    width: 100%;
+    @include flex($j-c:center);
+    gap:100px;
+
+    .tabFocus{
+        color:$c-primary;
+        padding: 8px;
+        border-bottom: 4px solid $c-primary;
+    }
+    a{
+        display: inline-block;
+        color: $c-black;
+        padding: 8px;
+    }
+
+}
+
+//form select
+.form-select{
+
 }
